@@ -72,7 +72,8 @@ Author: Daniel Kroening, kroening@kroening.com
   "(z3)(add-library)(show-dependence-graph)" \
   "(horn)(skip-loops):(apply-code-contracts)(model-argc-argv):" \
   "(show-threaded)(list-calls-args)(print-path-lengths)" \
-  "(undefined-function-is-assume-false)"
+  "(undefined-function-is-assume-false)" \
+  "(remove-function-body):"
 
 class goto_instrument_parse_optionst:
   public parse_options_baset,
