@@ -7,6 +7,7 @@
 * GOTO-INSTRUMENT: New option --print-path-lenghts
 * GOTO-ANALYZER: New option --unreachable-functions, --reachable-functions
 * GOTO-INSTRUMENT: New option --undefined-function-is-assume-false
+* GOTO-INSTRUMENT: New option --remove-function-body
 
 
 5.7
